--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,32 @@
+html {
+  box-sizing: border-box; }
+
 *,
 *:before,
 *:after {
   box-sizing: border-box; }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   line-height: 1.5;
-  color: set-text-color(yellow);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
 
 .bg-img {
-  background: url(../img/background.jpg);
+  background: url(../img/Web-Dev.jpg);
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
-  z-index: 0; }
+  position: relative; }
+  .bg-img .section-overlay {
+    content: '.';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    right: 0;
+    top: 0;
+    background: rgba(244, 244, 244, 0.79);
+    z-index: 0; }
 
 h1,
 h2 {
@@ -32,58 +43,71 @@ a {
 .text-secondary {
   color: #ff957c; }
 
-#welcome-section {
-  margin-top: 8rem;
-  text-align: center;
-  height: 100vh; }
-  #welcome-section #intro {
-    font-size: 2rem; }
-
-#navbar {
+.navbar {
   background: white;
+  opacity: 0.8;
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
-  box-shadow: 0 2px 2px #16344d; }
-
-.nav-grid {
-  display: grid;
-  padding: 10px 30px 0 30px;
-  grid-gap: 10px;
-  grid-template-columns: repeat(3, 1fr);
-  z-index: 50; }
-
-ul.navbar-nav {
-  text-align: center;
-  padding-right: 40px;
-  color: black;
+  box-shadow: 0 2px 2px #16344d;
+  z-index: 50;
+  width: 100%;
+  padding-bottom: 0;
   display: flex;
-  justify-content: space-evenly; }
+  align-items: center;
+  justify-content: space-between; }
+
+.social-icons {
+  flex-direction: column;
+  justify-content: flex-end;
+  margin-left: 10px; }
+  .social-icons a:hover {
+    color: #ff957c;
+    transition: all 0.15s ease-out; }
+
+.navbar-nav {
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  margin-right: 20px;
+  list-style-type: none;
+  justify-content: center;
+  flex: 1; }
 
 .nav-item {
-  list-style: none;
-  display: inline;
-  margin: 20px; }
+  margin: 0;
+  flex: 3; }
 
 .nav-link {
-  padding: 10px; }
+  margin-left: 15px;
+  padding-bottom: 10px; }
   .nav-link:hover {
     border-bottom: #ff957c 3px solid;
-    transition: all 0.2s ease-in-out; }
+    transition: all 0.15s ease-out; }
+
+.branding {
+  margin-top: 0;
+  margin-left: 20px; }
+
+.navbar-toggle {
+  display: none; }
 
 .current {
   border-bottom: #ff957c 3px solid; }
 
-.social-icons {
-  list-style: none;
-  text-align: right; }
-  .social-icons li {
-    display: inline-block;
-    margin-left: 10px; }
-    .social-icons li a:hover {
-      color: #ff957c;
-      transition: all 0.2s ease-in-out; }
+#welcome-section {
+  text-align: center;
+  height: 100vh; }
+  #welcome-section .welcome-section-text {
+    margin-top: 6rem; }
+  #welcome-section #intro {
+    font-size: 2rem; }
+    #welcome-section #intro .text-primary {
+      color: #0b1925; }
+
+#work h1 {
+  text-align: center; }
 
 .projects {
   display: flex;
@@ -100,12 +124,10 @@ ul.navbar-nav {
     .project-tile img:hover {
       opacity: 0.5;
       border-color: #ff957c;
-      transition: all 0.2s ease-in-out; }
+      transition: all 0.15s ease-out; }
   .project-tile:hover {
-    box-shadow: 0 6px 6px black; }
-
-#work h1 {
-  text-align: center; }
+    box-shadow: 0 6px 6px black;
+    transition: all 0.15s ease-out; }
 
 #contact {
   background: #5e9dd1;
@@ -114,38 +136,46 @@ ul.navbar-nav {
     text-align: center; }
 
 .contact-details {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  margin-top: 8rem;
-  margin-left: 2.5rem;
-  margin-right: 2.5rem; }
-  .contact-details div {
-    font-size: 2rem;
-    border: 3px #000 solid;
-    padding: 0.5rem 1.5rem;
-    margin-bottom: 1.5rem;
-    transition: all 0.2s ease-in-out; }
-    .contact-details div:hover {
-      background: #ff957c;
-      padding: 0.25rem 0.75rem;
-      color: white;
-      cursor: pointer; }
-      .contact-details div:hover span {
-        color: black; }
+  margin-top: 1rem; }
+  .contact-details .container {
+    border-radius: 5px;
+    max-width: 600px;
+    padding: 20px;
+    margin: auto; }
+  .contact-details input[type=text],
+  .contact-details input[type=email],
+  .contact-details textarea {
+    width: 100%;
+    padding: 14px;
+    border: none;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical; }
+    .contact-details input[type=text]:hover,
+    .contact-details input[type=email]:hover,
+    .contact-details textarea:hover {
+      border: 2px solid #ff957c;
+      transition: all 0.15s ease-out; }
+    .contact-details input[type=text]::placeholder,
+    .contact-details input[type=email]::placeholder,
+    .contact-details textarea::placeholder {
+      color: #888; }
+  .contact-details input[type=submit] {
+    background: #16344d;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    margin: 0 auto;
+    cursor: pointer; }
+    .contact-details input[type=submit]:hover {
+      background-color: #214f75; }
 
-section#work, section#contact {
-  min-height: 700px; }
-
-@media screen and (max-width: 768px) {
-  .navbar-nav {
-    display: flex;
-    justify-content: space-evenly; }
-  #welcome-section {
-    text-align: left;
-    margin-left: 2rem;
-    line-height: 1;
-    height: 75vh; } }
+section#work span.text-secondary, section#contact span.text-secondary {
+  border-bottom: #16344d 3px solid;
+  padding: 0.02rem; }
 
 footer {
   text-align: center;
@@ -155,3 +185,56 @@ footer {
   height: 60px; }
   footer > a {
     color: inherit; }
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    font-size: 16px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding-bottom: 10px; }
+  .navbar-nav {
+    padding-top: 15px;
+    display: none; }
+  .nav-link {
+    text-decoration: none; }
+    .nav-link:hover {
+      border-bottom: none;
+      color: #ff957c;
+      transition: all 0.15s ease-out; }
+  .navbar-nav li {
+    text-align: center;
+    margin: 10px auto;
+    margin-right: 10ch; }
+  .branding {
+    display: inline-block;
+    margin-top: 10px;
+    margin-left: 20px; }
+    .branding img {
+      width: 40px;
+      height: 40px; }
+  .social-icons {
+    margin-top: auto;
+    padding: 10px; }
+    .social-icons i {
+      font-size: 16px; }
+  .navbar-toggle {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    cursor: pointer;
+    color: rgba(0, 0, 0, 0.8);
+    font-size: 24px;
+    display: inline-block; }
+  .current {
+    border-bottom: none;
+    color: #ff957c; }
+  .active {
+    display: block; }
+  footer {
+    font-size: 0.8rem; }
+  #welcome-section {
+    text-align: left;
+    margin: auto;
+    line-height: 1.2;
+    height: 80vh; }
+    #welcome-section .welcome-section-text {
+      margin-left: 2rem; } }
