--- a/scss/main.scss
+++ b/scss/main.scss
@@ -174,6 +174,10 @@ a {
 
 }
 
+.icons {
+    display: none;
+}
+
 // Projects
 #work {
 
@@ -249,10 +253,10 @@ a {
         margin-bottom: 16px;
         resize: vertical;
 
-        &:hover {
-            border: 2px solid $secondary-color;
-            @include easeOut();
-        }
+        // &:hover {
+        //     border: 1px solid $secondary-color;
+        //     @include easeOut();
+        // }
 
         &::placeholder {
             color: #888;
@@ -303,7 +307,7 @@ footer {
 
 
 //Media Queries
-// Mobile Device mode
+// Tablet and Mobile mode
 @include mediaSm {}
 
 @include mediaMd {
@@ -346,12 +350,23 @@ footer {
         }
     }
 
+    .icons {
+        display: block;
+        margin-top: 20px;
+
+        a {
+            padding-right: 15px;
+            color: $primary-color;
+        }
+        a:hover {
+            color: $secondary-color;
+            @include easeOut();
+        }
+    }
+
     .social-icons {
         display: none;
-        margin-top: auto;
         padding: 10px;
-        justify-content: center;
-        text-align: center;
     }
 
     .social-icon {
@@ -414,10 +429,6 @@ footer {
 
     .active {
         display: block;
-    }
-
-    .active-social {
-        display: inline-flex;
     }
 
     footer {
