--- a/scss/main.scss
+++ b/scss/main.scss
@@ -38,8 +38,8 @@ body {
     .section-overlay {
         content: '.';
         position: absolute;
-        height: 100%;
-        width: 100%;
+        height: 100vh;
+        width: 100vw;
         right: 0;
         top: 0;
         background: rgba(244, 244, 244, 0.96);
@@ -93,7 +93,7 @@ a {
 
 .branding {
     margin-top: 0;
-    margin-left: 10px;
+    margin-left: 0.625rem;
     flex: 1;
 }
 
@@ -101,7 +101,7 @@ a {
     text-align: center;
     display: flex;
     flex-direction: row;
-    margin-right: 20px;
+    margin-right: 1.25rem;
     list-style-type: none;
     justify-content: center;
     flex: 8;
@@ -112,12 +112,12 @@ a {
 
 .nav-item {
     margin: 0;
-    padding-right: 10px; 
+    padding-right: 0.625rem; 
 }
 
 .nav-link {
-    margin-left: 15px;
-    padding-bottom: 10px;
+    margin-left: 0.9rem;
+    padding-bottom: 0.625rem;
 
     &:hover {
         border-bottom: $secondary-color 3px solid;
@@ -136,7 +136,7 @@ a {
 
 .social-icon {
     flex-direction: column;
-    padding-right: 10px;
+    padding-right: 0.625rem;
     list-style-type: none;
  
     a:hover {
@@ -193,14 +193,14 @@ a {
     // grid-gap: 40px;
     display: flex;
     flex-wrap: wrap;
-    margin: 20px;
+    margin: 1.25rem;
     justify-content: space-evenly;
 }
 
 .project-tile {
     box-shadow: 0 1px 1px black;
     border: $secondary-color 3px solid;
-    margin: 25px 0;
+    margin: 1.5rem 0;
 
     img {
         width: 100%;
@@ -236,7 +236,7 @@ a {
     .container {
         border-radius: 5px;
         max-width: 600px;
-        padding: 20px;
+        padding: 1.25rem;
         margin: auto;
     }
 
@@ -244,12 +244,12 @@ a {
     input[type=email],
     textarea {
         width: 100%;
-        padding: 14px;
+        padding: 0.875rem;
         border: none;
         border-radius: 4px;
         box-sizing: border-box;
-        margin-top: 6px;
-        margin-bottom: 16px;
+        margin-top: 0.375rem;
+        margin-bottom: 1rem;
         resize: vertical;
 
         // &:hover {
@@ -265,7 +265,7 @@ a {
     input[type=submit] {
         background: $primary-color;
         color: white;
-        padding: 12px 20px;
+        padding: 0.75rem 1.25rem;
         border: none;
         border-radius: 4px;
         margin: 0 auto;
@@ -311,13 +311,13 @@ footer {
 
 @include mediaMd {
     .navbar {
-        font-size: 16px;
+        font-size: 1rem;
         border: 1px solid rgba(0, 0, 0, 0.2);
-        padding-bottom: 10px;
+        padding-bottom: 0.625rem;
     }
 
     .navbar-nav {
-        padding-top: 15px;
+        padding-top: 0.9rem;
         display: none;
         list-style-type: none;
 
@@ -335,14 +335,14 @@ footer {
 
     .navbar-nav li {
         text-align: center;
-        margin: 10px auto;
+        margin: 0.625rem auto;
     }
 
     .branding {
         display: inline-block;
-        margin-top: 10px;
-        margin-left: 20px;
-        margin-right: -60px;
+        margin-top: 0.625rem;
+        margin-left: 1.25rem;
+        margin-right: -3.75rem;
         
         img {
             width: 40px;
@@ -352,10 +352,10 @@ footer {
 
     .icons {
         display: block;
-        margin-top: 20px;
+        margin-top: 1.25rem;
 
         a {
-            padding-right: 15px;
+            padding-right: 0.9rem;
             color: $primary-color;
             &:hover {
                 color: $secondary-color;
@@ -366,12 +366,12 @@ footer {
 
     .social-icons {
         display: none;
-        padding: 10px;
+        padding: 0.625rem;
     }
 
     .social-icon {
         i {
-            font-size: 16px;
+            font-size: 1rem;
         }
     }
 
@@ -381,7 +381,7 @@ footer {
         right: 20px;
         cursor: pointer;
         color: rgba(0, 0, 0, 0.8);
-        font-size: 24px;
+        font-size: 1.5rem;
         display: inline-block;
     }
 
@@ -396,7 +396,7 @@ footer {
         .btn-line {
             width: 28px;
             height: 3px;
-            margin: 0 0 5px 0;
+            margin: 0 0 0.3rem 0;
             background: $primary-color;
             @include easeOut;
         }
