--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -54,6 +54,8 @@ a {
   z-index: 50;
   width: 100%;
   padding-bottom: 0;
+  margin-bottom: 70px;
+  height: 70px;
   display: flex;
   align-items: center;
   justify-content: space-between; }
@@ -82,7 +84,7 @@ a {
   padding-bottom: 0.625rem; }
   .nav-link:hover {
     border-bottom: #ff957c 3px solid;
-    transition: all 0.2s ease-out; }
+    transition: all 0.3s ease-out; }
 
 .social-icons {
   list-style-type: none;
@@ -97,7 +99,7 @@ a {
   list-style-type: none; }
   .social-icon a:hover {
     color: #ff957c;
-    transition: all 0.2s ease-out; }
+    transition: all 0.3s ease-out; }
 
 .navbar-toggle {
   display: none; }
@@ -130,16 +132,19 @@ a {
 .project-tile {
   box-shadow: 0 1px 1px black;
   border: #ff957c 3px solid;
-  margin: 1.5rem 0; }
+  margin: 1.5rem 0;
+  width: 25rem;
+  height: 12.5rem; }
   .project-tile img {
-    width: 100%; }
+    width: 100%;
+    height: 100%; }
     .project-tile img:hover {
       opacity: 0.5;
       border-color: #ff957c;
-      transition: all 0.2s ease-out; }
+      transition: all 0.3s ease-out; }
   .project-tile:hover {
-    box-shadow: 0 6px 6px black;
-    transition: all 0.2s ease-out; }
+    box-shadow: 0 3px 3px rgba(66, 66, 66, 0.96);
+    transition: all 0.3s ease-out; }
 
 #contact {
   background: #3884c4;
@@ -164,7 +169,7 @@ a {
     box-sizing: border-box;
     margin-top: 0.375rem;
     margin-bottom: 1rem;
-    resize: vertical; }
+    resize: none; }
     .contact-details input[type=text]::placeholder,
     .contact-details input[type=email]::placeholder,
     .contact-details textarea::placeholder {
@@ -207,7 +212,7 @@ footer {
     .nav-link:hover {
       border-bottom: none;
       color: #ff957c;
-      transition: all 0.2s ease-out; }
+      transition: all 0.3s ease-out; }
   .navbar-nav li {
     text-align: center;
     margin: 0.625rem auto; }
@@ -227,7 +232,7 @@ footer {
       color: #16344d; }
       .icons a:hover {
         color: #ff957c;
-        transition: all 0.2s ease-out; }
+        transition: all 0.3s ease-out; }
   .social-icons {
     display: none;
     padding: 0.625rem; }
@@ -247,13 +252,13 @@ footer {
     right: 25px;
     top: 25px;
     cursor: pointer;
-    transition: all 0.2s ease-out; }
+    transition: all 0.3s ease-out; }
     .menu-btn .btn-line {
       width: 28px;
       height: 3px;
       margin: 0 0 0.3rem 0;
       background: #16344d;
-      transition: all 0.2s ease-out; }
+      transition: all 0.3s ease-out; }
     .menu-btn.close {
       transform: rotate(180deg); }
       .menu-btn.close .btn-line:nth-child(1) {
